discussion/kv_engine/145204/145204_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43818: Log exception backtraces when thrown from if available

Make use of the backtrace recorded in exception thrown via
cb::throwWithTrace() when reporting unhandled / unexpected exceptions:

- In terminate_handler when an uncaught exception terminates us. This
  is in addition to the backtrace we already print of where the
  exception was _caught_

- In Connection::executeCommandsCallback() when logging an uncaught
  exception (just before we close that connection).

Change-Id: I16db4af0a57ae91167e243dba9f134f01cd64153

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-02-05 17:13:38.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-05 17:40:49.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6961/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/connection.cc:48:10: error: "platform/exceptions.h" file not found [clang-diagnostic-error]
#include <platform/exceptions.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/crash_engine/crash_engine.cc:30:10: error: "platform/exceptions.h" file not found [clang-diagnostic-error]
#include <platform/exceptions.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/terminate_handler.cc:25:10: error: "platform/exceptions.h" file not found [clang-diagnostic-error]
#include <platform/exceptions.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6961/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/connection.cc:48:10:
error: "platform/exceptions.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6961/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33432/ : FAILURE

Compile error at ..\kv_engine\utilities\terminate_handler.cc(25): fatal error C1083: Cannot open include file: "platform/exceptions.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33432/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28758/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/crash_engine/crash_engine.cc:30:10:
fatal error: "platform/exceptions.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28758/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8546/ : FAILURE

Compile error at [2021-02-05T17:37:04.337Z] ../kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: platform/exceptions.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8546/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7600/ : FAILURE

Compile error at [2021-02-05T17:14:45.310Z] ../kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: "platform/exceptions.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7600/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8682/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16438/ : FAILURE

Compile error at [2021-02-05T17:37:49.844Z] ../kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: "platform/exceptions.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16438/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8892/ : FAILURE

Compile error at [2021-02-05T17:36:41.062Z] ../kv_engine/utilities/terminate_handler.cc:25:10:
fatal error: "platform/exceptions.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8892/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5498/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
